// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`recipe: Button > emits the expected shortcut tuples 1`] = `
[
  [
    "btn",
    "inline-flex items-center justify-center rounded-md font-medium border transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed",
  ],
  [
    "btn-c-primary",
    "focus-visible:ring-blue-500",
  ],
  [
    "btn-c-success",
    "focus-visible:ring-emerald-500",
  ],
  [
    "btn-c-danger",
    "focus-visible:ring-red-500",
  ],
  [
    "btn-c-warning",
    "focus-visible:ring-amber-500",
  ],
  [
    "btn-c-neutral",
    "focus-visible:ring-gray-500",
  ],
  [
    "btn-style-solid",
    "text-white",
  ],
  [
    "btn-style-outline",
    "bg-transparent",
  ],
  [
    "btn-style-subtle",
    "border-transparent",
  ],
  [
    "btn-style-ghost",
    "bg-transparent border-transparent",
  ],
  [
    "btn-s-sm",
    "px-2.5 py-1 text-sm",
  ],
  [
    "btn-s-md",
    "px-4 py-2 text-base",
  ],
  [
    "btn-s-lg",
    "px-6 py-3 text-lg",
  ],
]
`;

exports[`recipe: Button > exposes every expected class name in the manifest 1`] = `
[
  "btn",
  "btn-c-primary",
  "btn-c-success",
  "btn-c-danger",
  "btn-c-warning",
  "btn-c-neutral",
  "btn-style-solid",
  "btn-style-outline",
  "btn-style-subtle",
  "btn-style-ghost",
  "btn-s-sm",
  "btn-s-md",
  "btn-s-lg",
]
`;
